Fix navigation menu on mobile screens

--- a/css/aapae.scss
+++ b/css/aapae.scss
@@ -291,8 +291,8 @@ section {
 }
 
 .topbar {
-  position: absolute;
-  top: 0;
+  // position: absolute;
+  // top: 0;
   width: 100%;
 
   @include media($mobile) {
@@ -340,7 +340,10 @@ section {
     }
   }
   ul { 
-    margin: 0; opacity: 0.0;
+    position: absolute;
+    margin: 0; 
+    opacity: 0.0;
+    z-index: 100;
     @include transition(opacity, 0.5s);
     @include media($mobile) {
       width: 100%;
@@ -348,9 +351,11 @@ section {
     }  
   }
   li { 
-    list-style:none; 
+    list-style:none;
+    display: none;
     margin: 0;
-    padding-right: 0.5em 1em 0.5em 0;
+    // padding-right: 2rem;
+    padding-right: 2em;
     @include media($mobile) {
       background: $dark;
       a { color: white; }
@@ -367,6 +372,10 @@ section {
   opacity: 1.0;
   background: white;
   @include transition(opacity, 0.8s);
+
+  li {
+    display: block;
+  }
 }
 
 .search-bar {
